--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <title>Website Design Template</title>
 </head>
 <body>
-    
+    <!--header/nav-->
+    <!--banner-->
+    <!--server-->
+    <!--case/products-->
+    <!--company introduction/about us-->
+    <!--team member/customer comments-->
+    <!--news/cooperate partners-->
+    <!--footer-->
 </body>
 </html>
