--- a/index.html
+++ b/index.html
@@ -1,19 +1,92 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Website Design Template</title>
+    <link rel="stylesheet" href="./css/bootstrap.css">
+    <link rel="stylesheet" href="./css/base.css">
+    <link rel="stylesheet" href="./plug/font-awesome-4.7.0/css/font-awesome.css">
+    <style>
+
+    </style>
 </head>
+
 <body>
-    <!--header/nav-->
-    <!--banner-->
-    <!--server-->
-    <!--case/products-->
-    <!--company introduction/about us-->
-    <!--team member/customer comments-->
-    <!--news/cooperate partners-->
-    <!--footer-->
+    <div class="met-navfixed">
+        <!--T1 header/nav-->
+        <div class="header container inline">
+            <div class="inline">
+                <div class="header-logo">logo</div>
+                <div class="header-name">Name</div>
+            </div>
+            <div class="header-nav">
+                <ul class="inline">
+                    <li>1</li>
+                    <li>2</li>
+                    <li>3</li>
+                </ul>
+            </div>
+        </div>
+        <!--T2 banner-->
+        <div class="banner">
+            banner
+        </div>
+        <!--T3 server-->
+        <div class="server container">
+            <div class="item-header">
+                <div class="item-lg-header">服务范围</div>
+                <div class="item-sm-header">SERVER</div>
+            </div>
+            <div>
+                <div>
+                    <a href="">
+                        <div>
+                            <i class="fa fa-gift" aria-hidden="true"></i>
+                            <h4>科技 Science</h4>
+                            <p></p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+        </div>
+        <!--T4 case/products-->
+        <div class="product container">
+            <div class="item-header">
+                <div class="item-lg-header">产品</div>
+                <div class="item-sm-header">PRODUCTS</div>
+            </div>
+        </div>
+        <!--T5 company introduction/about us-->
+        <div class="about container">
+
+        </div>
+        <!--T6 team member/customer comments-->
+        <div class="member container">
+
+        </div>
+        <!--T6 news-->
+        <div class="news container">
+
+        </div>
+        <!--T6 cooperate partners-->
+        <div class="partner container">
+
+        </div>
+        <!--T7 contact-->
+        <div class="contact container">
+
+        </div>
+        <!--T8 footer-->
+        <div class="footer container">
+
+        </div>
+    </div>
+    <script>
+
+    </script>
 </body>
+
 </html>
